# typical90

./: 004_cross_sum.py  010_score_sum_queries.py  README.md  pyproject.toml
2_stars/: 022_cubic_cake.py  024_select_plus_minus_one.py  027_sign_up_requests.py  033_not_too_bright.py  055_select_5.cpp  055_select_5.py  061_deck.py  067_base_8_to_9.py  078_easy_graph_problem.py
3_stars/: 002_encyclopedia_of_parentheses.py  007_cp_classes.py  014_we_used_to_sing_a_song_together.py  016_minimum_coins.py  018_statue_of_chokudai.py  020_log_inequality.py  032_atcoder_ekiden.py  038_large_lcm.py  044_shift_and_swapping.py  044_shift_and_swapping_2.py  046_i_love_46.py  048_i_will_not_drop_out.py  050_stair_jump.py  052_dice_product.py  064_uplift.py  069_colorful_blocks_2.py  075_magic_for_balls.py  079_two_by_two.py  084_there_are_two_types_of_characters.py
4_stars/: 001_yokan_party.py
