[tool.poetry]
name = "typical90"
version = "0.1.0"
description = ""
authors = ["cromz22 <tt.pfr4343@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
